--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,5 +1,14 @@
 <section id="about">
   <div class="container">
-    <p>Info</p>
+    <p>I was born in Los Angeles and raised in New York. I've traveled to over 90 countries,
+      logged 3000+ dives, and climbed eight volcanos in an effort to make a life out of
+      one in a lifetime experiences.  To borrow from George Carlin, "And always remember,
+      life is not measured by the number of breaths we take, but by those moments that take
+      our breath away."</p>
+    <p>I've learned to code for the opportunity to make and maintain beautiful,
+      well-designed things with intelligent people that can have a meaningful impact
+      on people or businesses.</p>
+
+
   </div>
 </section>
