--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,27 +1,15 @@
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Portfolio</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-
-  </head>
 
   <body>
-  <div class="hero-image">
-    <div class="hero-text">
-      <h1>Rachel Hawa</h1>
-      <h2>Software Engineer</h2>
-      <div class="navbox" id="js-navigation">
-        <%= link_to "About", about_path, id: "about", class: "active, button" %>
-        <%= link_to "Projects", projects_path, id: "projects", class: "button"%>
-        <%= link_to "Resume", resume_path, id: "resume", class: "button"%>
-        <%= link_to "Contact", contact_path, id: "contact", class: "button"%>
-      </div>
-    </div>
-  </div>
+    <%= render '/application/hero' %>
+    <%= yield %>
+
+
+
+
 
 
   <div id="js-content">
@@ -29,9 +17,9 @@
   </div>
 
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
 
-  </body>
-</html>
+    </body>
+  </html>
