--- a/app/views/application/projects.html.erb
+++ b/app/views/application/projects.html.erb
@@ -1,3 +1,32 @@
+
 <section id="projects">
-projects
+
+  <div class="jumbotron">
+  <h1 class="display-4">WINELOG</h1>
+  <p class="lead">Digital wine tasting card built with Ruby on Rails, frontend designed with Bootstrap, HTML/CSS</p>
+  <hr class="my-4">
+  <ul>
+    <li>Utilizes RESTful routes and MVC framework</li><br>
+    <li>Features custom scope methods using Active Record Query Interface to provide insights on user preferences</li><br>
+    <li>Seeded database from external source using Nokogiri</li><br>
+    <li>OAuth login with Facebook/Google</li><br>
+    <li>Enabled users to upload photo with Active Storage and Google Cloud storage</li><br>
+    <li>Mobile responsive layout</li>
+  </ul>
+  <%= link_to "Live Demo", 'https://wine-log.herokuapp.com/',  target: "_blank", class: "button"%>
+  <%= link_to "GitHub", 'https://github.com/rachelkathleen/wine-log',  target: "_blank", class: "button"%>
+  </div>
+
+  <div class="jumbotron">
+  <h1 class="display-4">PARKFINDER</h1>
+  <p class="lead">Sinatra CRUD application for tracking  National Parks users have been to or want to visit, and sharing notes </p>
+  <hr class="my-4">
+    <ul>
+      <li>Utilizes RESTful routes and MVC framework</li><br>
+      <li>Designed relational database using SQLite (development) and Postgres (production)</li><br>
+      <li>Scraped NPS website using Nokogiri for park data and photos</li><br>
+    </ul>
+  <%= link_to "Live Demo", 'https://parkfinder-sinatra-project.herokuapp.com/',  target: "_blank", class: "button"%>
+  <%= link_to "GitHub", 'https://github.com/rachelkathleen/ParkFinder',  target: "_blank", class: "button"%>
+  </div>
 </section>
