add content for resume

--- a/app/views/application/resume.html.erb
+++ b/app/views/application/resume.html.erb
@@ -1,3 +1,42 @@
 <section id="resume">
-  <p>resume</p>
+  <div class="jumbotron">
+    <div class="education">
+      <div class="school">
+        <h5>Flatiron School</h5>
+        <p>In progress</p>
+        <p>Top rated full-stack web development program; nine months and 1000 hour
+          curriculum covering Ruby, JavaScript, React/Redux, SQL, Git, and HTML/CSS</p>
+      </div>
+      <div class="school">
+        <h5>SUNY Purchase </h5>
+        <p> Coursework completed towards a Bachelor of Arts degree in Economics</p>
+      </div>
+      <div class="school">
+        <h5>Occidental College</h5>
+        <p> Coursework completed towards a Bachelor of Arts degree in Economics</p>
+
+      </div>
+
+    </div>
+    <div class="work">
+      <div class="job">
+        <h5>Greystar Management</h5><h6>Leasing Professional</h6>
+        <p>October 2018 - Present</p>
+        <ul>
+          <li>Help build rent growth alongside management team to make asset profitable and ready for sale</li>
+          <li>Among top leasing agents in DFW region, awarded first tier President's Club in first quarter</li>
+        </ul>
+      </div>
+      <div class="job">
+        <h5>Sidecar Interactive</h5><h6>Account Executive</h6>
+        <p>September, 2017 - September 2018</p>
+        <ul>
+          <li>Help build rent growth alongside management team to make asset profitable and ready for sale</li>
+          <li>Among top leasing agents in DFW region, awarded first tier President's Club in first quarter</li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+
 </section>
