add font awesome icons for footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,6 @@
   <%= csp_meta_tag %>
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-
+  <script src="https://kit.fontawesome.com/35b8e7b015.js"></script>
 </head>
     <%= yield %>
