--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -9,6 +9,16 @@
       well-designed things with intelligent people that can have a meaningful impact
       on people or businesses.</p>
 
+    <a href="https://github.com/rachelkathleen" target="blank"> <i class="fab fa-github fa-5x"></i></a>
+    <a href="https://medium.com/@rachel.hawa" target="blank"> <i class="fab fa-medium fa-5x"></i></a>
+
+
+
+  
+
+      <i class="fab fa-linkedin fa-5x"></i>
+      <i class="fas fa-paper-plane fa-5x"></i>
+
 
   </div>
 </section>
