--- a/app/views/application/_hero.html.erb
+++ b/app/views/application/_hero.html.erb
@@ -6,8 +6,9 @@
     <div class="navbox" id="js-navigation">
       <%= link_to "About", about_path, id: "about", class: "active, button" %>
       <%= link_to "Projects", projects_path, id: "projects", class: "button"%>
-      <%= link_to "Resume", resume_path, id: "resume", class: "button"%>
+      <%= link_to "Resume", resume_path, id: "resume", class: "button", target: "blank"%>
       <%= link_to "Contact", contact_path, id: "contact", class: "button"%>
     </div>
+
   </div>
 </div>
