--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,5 +1,9 @@
-<footer class="bg-black small text-center text-white-50">
-  <div class="container">
-    <p>Copyright &copy; Rachel Hawa 2019</p>
-  </div>
+<footer class="footer">
+  <ul>
+    <li><a href="https://github.com/rachelkathleen" target="blank"> <i class="fab fa-github fa-2x"></i></a></li>
+    <li><a href="https://medium.com/@rachel.hawa" target="blank"> <i class="fab fa-medium fa-2x"></i></a></li>
+    <li><a href="https://www.linkedin.com/in/rachelhawa/" target="blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
+    <li><a href="mailto:rachel.hawa@gmail.com"target="blank"><i class="fas fa-paper-plane fa-2x"></i></a></li>
+    <li>&copy; Rachel Hawa 2019</li>
+  </ul>
 </footer>
