--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,5 +1,5 @@
 <section id="about">
-  <div class="container">
+  <div class="main-content">
     <p>I was born in Los Angeles and raised in New York. I've traveled to over 90 countries,
       logged 3000+ dives, and climbed eight volcanos in an effort to make a life out of
       one in a lifetime experiences.  To borrow from George Carlin, "And always remember,
@@ -9,15 +9,7 @@
       well-designed things with intelligent people that can have a meaningful impact
       on people or businesses.</p>
 
-    <a href="https://github.com/rachelkathleen" target="blank"> <i class="fab fa-github fa-5x"></i></a>
-    <a href="https://medium.com/@rachel.hawa" target="blank"> <i class="fab fa-medium fa-5x"></i></a>
 
-
-
-  
-
-      <i class="fab fa-linkedin fa-5x"></i>
-      <i class="fas fa-paper-plane fa-5x"></i>
 
 
   </div>
