--- a/app/views/application/projects.html.erb
+++ b/app/views/application/projects.html.erb
@@ -1,6 +1,6 @@
 
 <section id="projects">
-
+  <div class="main-content">
   <div class="jumbotron">
   <h1 class="display-4">WINELOG</h1>
   <p class="lead">Digital wine tasting card built with Ruby on Rails, frontend designed with Bootstrap, HTML/CSS</p>
@@ -13,8 +13,8 @@
     <li>Enabled users to upload photo with Active Storage and Google Cloud storage</li><br>
     <li>Mobile responsive layout</li>
   </ul>
-  <%= link_to "Live Demo", 'https://wine-log.herokuapp.com/',  target: "_blank", class: "button"%>
-  <%= link_to "GitHub", 'https://github.com/rachelkathleen/wine-log',  target: "_blank", class: "button"%>
+  <%= link_to "Live Demo", 'https://wine-log.herokuapp.com/',  target: "_blank", class: "button button-primary"%>
+  <%= link_to "GitHub", 'https://github.com/rachelkathleen/wine-log',  target: "_blank", class: "button button-primary"%>
   </div>
 
   <div class="jumbotron">
@@ -26,7 +26,8 @@
       <li>Designed relational database using SQLite (development) and Postgres (production)</li><br>
       <li>Scraped NPS website using Nokogiri for park data and photos</li><br>
     </ul>
-  <%= link_to "Live Demo", 'https://parkfinder-sinatra-project.herokuapp.com/',  target: "_blank", class: "button"%>
-  <%= link_to "GitHub", 'https://github.com/rachelkathleen/ParkFinder',  target: "_blank", class: "button"%>
+  <%= link_to "Live Demo", 'https://parkfinder-sinatra-project.herokuapp.com/',  target: "_blank", class: "button button-primary"%>
+  <%= link_to "GitHub", 'https://github.com/rachelkathleen/ParkFinder',  target: "_blank", class: "button button-primary"%>
+  </div>
   </div>
 </section>
