--- a/app/views/application/resume.html.erb
+++ b/app/views/application/resume.html.erb
@@ -1,3 +1,5 @@
-<div class="jumbotron">
-  <%= image_tag "Rachel Hawa.png", align: "center"%>
-</div>
+<section id="contact">
+  <div class="main-content">
+    <%= image_tag "Rachel Hawa.png" %>
+  </div>
+</section>
