--- a/app/views/application/contact.html.erb
+++ b/app/views/application/contact.html.erb
@@ -1,5 +1,5 @@
 <section id="contact">
-  <div class="container">
+  <div class="main-content">
     <%= image_tag "Rachel Hawa.png" %>
   </div>
 </section>
