--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -5,18 +5,12 @@
 
   <body>
     <%= render '/application/hero' %>
-    <%= yield %>
-
-
-
-
-
 
   <div id="js-content">
 
   </div>
 
-
+ <%= render '/application/footer' %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
