add CLI project

--- a/app/views/application/projects.html.erb
+++ b/app/views/application/projects.html.erb
@@ -19,7 +19,7 @@
 
   <div class="jumbotron">
   <h1 class="display-4">PARKFINDER</h1>
-  <p class="lead">Sinatra CRUD application for tracking  National Parks users have been to or want to visit, and sharing notes </p>
+  <p class="lead">Sinatra CRUD application for tracking National Parks users have been to or want to visit, and sharing notes </p>
   <hr class="my-4">
     <ul>
       <li>Utilizes RESTful routes and MVC framework</li><br>
@@ -28,6 +28,19 @@
     </ul>
   <%= link_to "Live Demo", 'https://parkfinder-sinatra-project.herokuapp.com/',  target: "_blank", class: "button button-primary"%>
   <%= link_to "GitHub", 'https://github.com/rachelkathleen/ParkFinder',  target: "_blank", class: "button button-primary"%>
+  </div>
+
+  <div class="jumbotron">
+  <h1 class="display-4">DIVEREPORT</h1>
+  <p class="lead">Ruby CLI Application</p>
+  <hr class="my-4">
+    <ul>
+      <li>Something</li><br>
+      <li>something</li><br>
+      <li>something</li><br>
+    </ul>
+  <%= link_to "Video Demo", 'https://drive.google.com/file/d/1fbsJk7zPPzM-kkcxL7sqxeP3wg8AZmiu/view?usp=sharing',  target: "_blank", class: "button button-primary"%>
+  <%= link_to "GitHub", 'https://github.com/rachelkathleen/DiveReport',  target: "_blank", class: "button button-primary"%>
   </div>
   </div>
 </section>
