update js, about and layouts

--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -5,7 +5,7 @@
       one in a lifetime experiences.  To borrow from George Carlin, "And always remember,
       life is not measured by the number of breaths we take, but by those moments that take
       our breath away."</p>
-    <p>I've learned to code for the opportunity to make and maintain beautiful,
+    <p>My goal in learning to code is for the opportunity to make and maintain beautiful,
       well-designed things with intelligent people that can have a meaningful impact
       on people or businesses.</p>
 
