--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,19 +1,4 @@
+<div id="js-content">
 
-<!DOCTYPE html>
-<html>
-
-
-  <body>
-    <%= render '/application/hero' %>
-
-  <div id="js-content">
-
-  </div>
-
- <%= render '/application/footer' %>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-
-
-    </body>
-  </html>
+</div>
+<%= javascript_include_tag 'home', 'data-turbolinks-track': 'reload' %>
