fix js and routes

--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,4 +1,4 @@
-<section id="about">
+<section id="about" style="display: block">
   <div class="main-content">
     <p>I was born in Los Angeles and raised in New York. I've traveled to over 90 countries,
       logged 3000+ dives, and climbed eight volcanos in an effort to make a life out of
