--- a/app/views/application/contact.html.erb
+++ b/app/views/application/contact.html.erb
@@ -1,4 +1,4 @@
-<section id="contact">
+<section id="contact" style="display: block">
   <div class="main-content">
     <%= image_tag "Rachel Hawa.png" %>
   </div>
