--- a/app/views/application/projects.html.erb
+++ b/app/views/application/projects.html.erb
@@ -1,5 +1,5 @@
 
-<section id="projects">
+<section id="projects" style="display: block">
   <div class="main-content">
   <div class="jumbotron">
   <h1 class="display-4">WINELOG</h1>
