--- a/app/views/application/resume.html.erb
+++ b/app/views/application/resume.html.erb
@@ -1,5 +1,5 @@
-<section id="contact">
+<section id="resume" style="display: block">
   <div class="main-content">
-    <%= image_tag "Rachel Hawa.png" %>
-  </div>
+      <%= image_tag "Rachel Hawa.png" %>
+  </div
 </section>
