--- a/app/views/application/contact.html.erb
+++ b/app/views/application/contact.html.erb
@@ -1,1 +1,13 @@
-
+<section id="contact" style="display: block">
+  <div class="main-content">
+    <div class="jumbotron">
+      <h1 class="display-4">CONTACT</h1>
+      <p class="lead">Currently in Dallas TX, looking for opportunites in Austin, Denver, Portland or Seattle areas</p>
+      <hr class="my-4">
+        <p><i class="fa fa-phone"></i> <a href="tel:3056809210">(305) 680-9210</a></p>
+        <p><i class="fa fa-envelope"></i> <a href="mailto:rachel.hawa@gmail.com">rachel.hawa@gmail.com</a></p>
+        <p><i class="fab fa-medium"></i> <a href="https://medium.com/@rachel.hawa">Medium</a></p>
+        <p><i class="fab fa-github"></i> <a href="https://github.com/rachelkathleen">github.com/rachelkathleen</a></p>
+    </div>
+  </div>
+</section>
