add video links

--- a/app/views/application/projects.html.erb
+++ b/app/views/application/projects.html.erb
@@ -14,6 +14,7 @@
     <li>Mobile responsive layout</li>
   </ul>
   <%= link_to "Live Demo", 'https://wine-log.herokuapp.com/',  target: "_blank", class: "button button-primary"%>
+  <%= link_to "Video Demo", 'https://drive.google.com/file/d/1x1R4_1moUpMBsxAHjTk8mhiKfHr5wt6F/view?usp=sharing',  target: "_blank", class: "button button-primary"%>
   <%= link_to "GitHub", 'https://github.com/rachelkathleen/wine-log',  target: "_blank", class: "button button-primary"%>
   </div>
 
@@ -27,6 +28,7 @@
       <li>Scraped NPS website using Nokogiri for park data and photos</li><br>
     </ul>
   <%= link_to "Live Demo", 'https://parkfinder-sinatra-project.herokuapp.com/',  target: "_blank", class: "button button-primary"%>
+  <%= link_to "Video Demo", 'https://drive.google.com/file/d/1AFNIKso2AJRAZatkG4qXT43FCqvKTZP6/view?usp=sharing',  target: "_blank", class: "button button-primary"%>
   <%= link_to "GitHub", 'https://github.com/rachelkathleen/ParkFinder',  target: "_blank", class: "button button-primary"%>
   </div>
 
