--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,10 @@
  *= require_tree .
  *= require_self
  */
+ i {
+   opacity: 0.6;
+ }
+
  body, html {
    height: 100%;
    margin: 0;
@@ -35,6 +39,10 @@
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
+ }
+
+ .headlines {
+   opacity: .8
  }
 
 li {
