--- a/app/views/application/_hero.html.erb
+++ b/app/views/application/_hero.html.erb
@@ -1,8 +1,10 @@
 <div class="hero-image">
   <div class="hero-text">
-    <h1>Rachel Hawa</h1>
-    <h4>Software Engineer</h4>
-    <h6>Ruby on Rails, HTML5/CSS3, Javascript, React.js</h6>
+    <div class="headlines">
+      <h1>Rachel Hawa</h1>
+      <h4>Software Engineer</h4>
+      <h6>Ruby on Rails, HTML5/CSS3, Javascript, React.js</h6>
+    </div>
     <div class="navbox" id="js-navigation">
       <ul class="buttons">
         <li><%= link_to "About", "./about.html", id: "about", class: "button" %></li>
