--- a/app/views/application/divereport.html.erb
+++ b/app/views/application/divereport.html.erb
@@ -5,9 +5,9 @@
     <p class="lead">Ruby CLI Application</p>
     <hr class="my-4">
       <ul>
-        <li>Something</li><br>
-        <li>something</li><br>
-        <li>something</li><br>
+        <li>Multi level command line application</li><br>
+        <li>Built using OO design principals</li><br>
+        <li>Data scraped from DiveReport.com using Nokogiri</li><br>
       </ul>
     <%= link_to "Video Demo", 'https://drive.google.com/file/d/1fbsJk7zPPzM-kkcxL7sqxeP3wg8AZmiu/view?usp=sharing',  target: "_blank", class: "button button-primary"%>
     <%= link_to "GitHub", 'https://github.com/rachelkathleen/DiveReport',  target: "_blank", class: "button button-primary"%>
