--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,12 +1,19 @@
+
+
 <section id="about" style="display: block">
   <div class="main-content">
-    <p>Born in Los Angeles and raised in New York. I've traveled to over 90 countries,
-      logged 3000+ dives, and climbed eight volcanos in an effort to make a life out of
-      one in a lifetime experiences.  To borrow from George Carlin, "And always remember,
-      life is not measured by the number of breaths we take, but by those moments that take
-      our breath away."</p>
-    <p>My goal in learning to code is for the opportunity to make and maintain beautiful,
-      well-designed things with intelligent people that can have a meaningful impact
-      on people or businesses.</p>
+    <div class="jumbotron">
+
+      <p class="lead">Born in Los Angeles and raised in New York. I've traveled to over 90 countries,
+        logged 3000+ dives, and climbed eight volcanos in an effort to make a life out of
+        one in a lifetime experiences.  To borrow from George Carlin, "And always remember,
+        life is not measured by the number of breaths we take, but by those moments that take
+        our breath away."</p>
+
+    
+      <p class="lead">My goal in learning to code is for the opportunity to make and maintain beautiful,
+        well-designed things with intelligent people that can have a meaningful impact
+        on people or businesses.</p>
+    </div>
   </div>
 </section>
