add resume and update css

--- a/app/views/application/resume.html.erb
+++ b/app/views/application/resume.html.erb
@@ -1,5 +1,178 @@
 <section id="resume" style="display: block">
-  <div class="main-content">
-      <%= image_tag "Rachel Hawa.png" %>
-  </div
+   <div class="main-content">
+   <div class="jumbotron">
+   <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+         <div class="title text-center">
+            <h1 class="display-4">Rachel Hawa</h1>
+            <h3>Fullstack Developer</h3>
+            <hr class="my-4">
+            <!-- summary section -->
+            <div class="jumbotron">
+              <h4 class="display-4">Summary</h4>
+               <p class="lead">Full stack web developer with experience with Ruby/Ruby on Rails.
+                  Previous roles in software sales and account management help me understand
+                  the importance of writing clean code that translates into an excellent
+                  customer experience. Transitioned to coding to help companies create
+                  software that adds value to their customers from the database to the user
+                  interface.
+               </p>
+               <h4 class="display-4">Skills</h4>
+               <p class="lead">Ruby/Ruby on Rails, JavaScript, React/Redux, HTML5/CSS3, Git, Bootstrap, SQL, PostgreSQL, Heroku</p>
+
+         <!-- education  section -->
+         <div class="jumbotron">
+            <hr class="my-4">
+            <h2 class="display-4">Education </h2>
+            <div class="row experience-title">
+               <div class="col-md-9">
+                  <h3>Flatiron School</h3>
+               </div>
+               <div class="col-md-3">
+                  <h4>November 2018 - Present</h4>
+               </div>
+            </div>
+            <div class="row experience-summary">
+               <div class="col-md-12">
+                  <p>Top rated full-stack web development program; nine months and 1000 hour curriculum covering Ruby, JavaScript, React/Redux, SQL, Git, and HTML/CSS</p>
+               </div>
+            </div>
+            <div class="row experience-title">
+               <div class="col-md-9">
+                  <h3>SUNY Purchase</h3>
+               </div>
+               <div class="col-md-3">
+                  <h4>2004-2006</h4>
+               </div>
+            </div>
+            <div class="row experience-summary">
+               <div class="col-md-12">
+                  <p>Coursework completed towards a Bachelor of Arts degree in Economics</p>
+               </div>
+            </div>
+            <div class="row experience-title">
+               <div class="col-md-9">
+                  <h3>Occidental College</h3>
+               </div>
+               <div class="col-md-3">
+                  <h4>2002-2004</h4>
+               </div>
+            </div>
+            <div class="row experience-summary">
+               <div class="col-md-12">
+                  <p>Coursework completed towards a Bachelor of Arts degree in Economics</p>
+               </div>
+            </div>
+            <!-- work experience section -->
+            <hr class="my-4">
+            <div class="jumbotron">
+               <h2 class="display-4">Work Experience</h2>
+               <div class="row experience-title">
+                  <div class="col-md-9">
+                     <h3>Greystar</h3>
+                     <h4>Leasing Professional</h4>
+                  </div>
+                  <div class="col-md-3">
+                     <h3>October 2018 - Present</h3>
+                  </div>
+               </div>
+               <div class="row experience-summary">
+                  <div class="col-md-12">
+                     <ul>
+                        <li>Help build rent growth alongside management team to make asset profitable and ready for sale</li>
+                        <li>Among top leasing agents in DFW region, awarded first tier President's Club in first quarter</li>
+                        <li>Circle of Excellence winner - March 2019</li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="row experience-title">
+                  <div class="col-md-9">
+                     <h3>Sidecar Interactive</h3>
+                     <h4>Account Executive</h4>
+                  </div>
+                  <div class="col-md-3">
+                     <h3>September 2017 - September 2018</h3>
+                  </div>
+               </div>
+               <div class="row experience-summary">
+                  <div class="col-md-12">
+                     <ul>
+                        <li>Used statistical analysis of Google Shopping performance for e-commerce retailers to sell technical product to C level executives</li>
+                        <li>Brought on first client in first month, demonstrating ability to learn new market and product quicklyr</li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="row experience-title">
+                  <div class="col-md-9">
+                     <h3>Evolution Ventures</h3>
+                     <h4>Sales Development & Operations</h4>
+                  </div>
+                  <div class="col-md-3">
+                     <h3>January 2016 - August 2017</h3>
+                  </div>
+               </div>
+               <div class="row experience-summary">
+                  <div class="col-md-12">
+                     <ul>
+                        <li>Designed and implemented custom CRM using Hubspot, including migration of legacy data</li>
+                        <li>Increased annual revenue 30% YOY</li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="row experience-title">
+                  <div class="col-md-9">
+                     <h3>Kaseya</h3>
+                     <h4>Account Manager & Sales Development</h4>
+                  </div>
+                  <div class="col-md-3">
+                     <h3>April - December 2015</h3>
+                  </div>
+               </div>
+               <div class="row experience-summary">
+                  <div class="col-md-12">
+                     <ul>
+                        <li>Reduced churn in tier 3, 4 and 5 accounts in APAC region by over 25%</li>
+                        <li>Worked collaboratively with field sales to build channel sales, first region to do so in company</li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="row experience-title">
+                  <div class="col-md-9">
+                     <h3>Career Break</h3>
+                  </div>
+                  <div class="col-md-3">
+                     <h3>March 2014 - March 2015</h3>
+                  </div>
+               </div>
+               <div class="row experience-summary">
+                  <div class="col-md-12">
+                     <ul>
+                        <li>Traveled to 15 countries in 5 continents, became PADI Dive Instructor </li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="row experience-title">
+                  <div class="col-md-9">
+                     <h3>Aerohive Networks</h3>
+                     <h4>Opportunity Development Representative</h4>
+                  </div>
+                  <div class="col-md-3">
+                     <h3>January 2013 - February 2014</h3>
+                  </div>
+               </div>
+               <div class="row experience-summary">
+                  <div class="col-md-12">
+                     <ul>
+                        <li>Top ODR across entire team, both in US and international, 130% to quota overall </li>
+                        <li>Built pipeline that lead to over 3 million in closed deals</li>
+                        <li>Created own direct mail campaign for target accounts in the Northeast, lead to 3 new accounts on a list of 20 strategic accounts</li>
+                        <li>President's Club Winner, 2013 and Top Sales Team of 2013</li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   </div
 </section>
