format resume page

--- a/app/views/application/resume.html.erb
+++ b/app/views/application/resume.html.erb
@@ -1,15 +1,15 @@
 <section id="resume" style="display: block">
-   <div class="main-content">
-   <div class="jumbotron">
-   <div class="row">
-      <div class="col-md-10 col-md-offset-1">
-         <div class="title text-center">
-            <h1 class="display-4">Rachel Hawa</h1>
+    <div class="main-content">
+    <div class="jumbotron">
+    <div class="row">
+      <div >
+        <div class="title text-center">
+            <!-- <h1>Rachel Hawa</h1>
             <h3>Fullstack Developer</h3>
-            <hr class="my-4">
+            <hr class="my-4"> -->
             <!-- summary section -->
-            <div class="jumbotron">
-              <h4 class="display-4">Summary</h4>
+            <div>
+              <h4 class="text-center">Summary</h4>
                <p class="lead">Full stack web developer with experience with Ruby/Ruby on Rails.
                   Previous roles in software sales and account management help me understand
                   the importance of writing clean code that translates into an excellent
@@ -17,19 +17,42 @@
                   software that adds value to their customers from the database to the user
                   interface.
                </p>
-               <h4 class="display-4">Skills</h4>
-               <p class="lead">Ruby/Ruby on Rails, JavaScript, React/Redux, HTML5/CSS3, Git, Bootstrap, SQL, PostgreSQL, Heroku</p>
+
+               <div class="row">
+           <div class="col-md-3 col-sm-3">
+             <p>Ruby/Ruby on Rails</p>
+             <p>HTML5/CSS3</p>
+
+           </div>
+           <div class="col-md-3 col-sm-3">
+             <p>JavaScript</p>
+             <p>React/Redux/p>
+
+           </div>
+           <div class="col-md-3 col-sm-3">
+             <p>Git</p>
+             <p>Bootstrap</p>
+
+           </div>
+           <div class="col-md-3 col-sm-3">
+             <p>Heroku</p>
+             <p>SQL/PostgreSQL</p>
+
+           </div>
+         </div>
+
+       </div>
 
          <!-- education  section -->
-         <div class="jumbotron">
+         <div>
             <hr class="my-4">
-            <h2 class="display-4">Education </h2>
+            <h2 class="text-center">Education</h2>
             <div class="row experience-title">
-               <div class="col-md-9">
+               <div class="col-md-6">
                   <h3>Flatiron School</h3>
                </div>
-               <div class="col-md-3">
-                  <h4>November 2018 - Present</h4>
+               <div class="col-md-6">
+                  <h5 class="date">November 2018 - Present</h5>
                </div>
             </div>
             <div class="row experience-summary">
@@ -38,11 +61,11 @@
                </div>
             </div>
             <div class="row experience-title">
-               <div class="col-md-9">
+               <div class="col-md-6">
                   <h3>SUNY Purchase</h3>
                </div>
-               <div class="col-md-3">
-                  <h4>2004-2006</h4>
+               <div class="col-md-6">
+                  <h5 class="date">2004-2006</h5>
                </div>
             </div>
             <div class="row experience-summary">
@@ -51,11 +74,11 @@
                </div>
             </div>
             <div class="row experience-title">
-               <div class="col-md-9">
+               <div class="col-md-6">
                   <h3>Occidental College</h3>
                </div>
-               <div class="col-md-3">
-                  <h4>2002-2004</h4>
+               <div class="col-md-6">
+                  <h5 class="date">2002-2004</h5>
                </div>
             </div>
             <div class="row experience-summary">
@@ -65,15 +88,15 @@
             </div>
             <!-- work experience section -->
             <hr class="my-4">
-            <div class="jumbotron">
-               <h2 class="display-4">Work Experience</h2>
+            <div>
+               <h2 class="text-center">Work Experience</h2>
                <div class="row experience-title">
-                  <div class="col-md-9">
+                 <div class="col-md-6">
                      <h3>Greystar</h3>
                      <h4>Leasing Professional</h4>
                   </div>
-                  <div class="col-md-3">
-                     <h3>October 2018 - Present</h3>
+                  <div class="col-md-6">
+                     <h5 class="date">October 2018 - Present</h5>
                   </div>
                </div>
                <div class="row experience-summary">
@@ -86,29 +109,29 @@
                   </div>
                </div>
                <div class="row experience-title">
-                  <div class="col-md-9">
+                  <div class="col-md-6">
                      <h3>Sidecar Interactive</h3>
                      <h4>Account Executive</h4>
                   </div>
-                  <div class="col-md-3">
-                     <h3>September 2017 - September 2018</h3>
+                  <div class="col-md-6">
+                     <h5 class="date">September 2017 - September 2018</h5>
                   </div>
                </div>
                <div class="row experience-summary">
                   <div class="col-md-12">
                      <ul>
                         <li>Used statistical analysis of Google Shopping performance for e-commerce retailers to sell technical product to C level executives</li>
-                        <li>Brought on first client in first month, demonstrating ability to learn new market and product quicklyr</li>
+                        <li>Brought on first client in first month, demonstrating ability to learn new market and product quickly</li>
                      </ul>
                   </div>
                </div>
                <div class="row experience-title">
-                  <div class="col-md-9">
+                  <div class="col-md-6">
                      <h3>Evolution Ventures</h3>
                      <h4>Sales Development & Operations</h4>
                   </div>
-                  <div class="col-md-3">
-                     <h3>January 2016 - August 2017</h3>
+                  <div class="col-md-6">
+                     <h5 class="date">January 2016 - August 2017</h5>
                   </div>
                </div>
                <div class="row experience-summary">
@@ -120,12 +143,12 @@
                   </div>
                </div>
                <div class="row experience-title">
-                  <div class="col-md-9">
+                  <div class="col-md-6">
                      <h3>Kaseya</h3>
                      <h4>Account Manager & Sales Development</h4>
                   </div>
-                  <div class="col-md-3">
-                     <h3>April - December 2015</h3>
+                  <div class="col-md-6">
+                     <h5 class="date">April - December 2015</h5>
                   </div>
                </div>
                <div class="row experience-summary">
@@ -137,11 +160,11 @@
                   </div>
                </div>
                <div class="row experience-title">
-                  <div class="col-md-9">
+                  <div class="col-md-6">
                      <h3>Career Break</h3>
                   </div>
-                  <div class="col-md-3">
-                     <h3>March 2014 - March 2015</h3>
+                  <div class="col-md-6">
+                     <h5 class="date">March 2014 - March 2015</h5>
                   </div>
                </div>
                <div class="row experience-summary">
@@ -152,12 +175,12 @@
                   </div>
                </div>
                <div class="row experience-title">
-                  <div class="col-md-9">
+                  <div class="col-md-6">
                      <h3>Aerohive Networks</h3>
                      <h4>Opportunity Development Representative</h4>
                   </div>
-                  <div class="col-md-3">
-                     <h3>January 2013 - February 2014</h3>
+                  <div class="col-md-6">
+                     <h5 class="date">January 2013 - February 2014</h5>
                   </div>
                </div>
                <div class="row experience-summary">
@@ -174,5 +197,7 @@
          </div>
       </div>
    </div>
-   </div
+   </div>
+
+ </div>
 </section>
