--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -457,3 +457,11 @@ label > .label-body {
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
+
+.text-center {
+  text-align: center
+}
+
+.date {
+  text-align: right;
+}
